performance update automation

--- a/Atencion.html
+++ b/Atencion.html
@@ -29,24 +29,24 @@
         <div class="row mt-4 mb-4 ">
             <div class="col-md-4">
             <div class="chart-title h3">Educación</div>
-            <div id="chart_educacion"></div>
+            <div id="Atencion_a_grupos_especiales_Educacion"></div>
             </div>
 
             <!-- Dependencia 2: ADMINISTRACIÓN -->
             <div class="col-md-4">
             <div class="chart-title h3">Igualdad de Género</div>
-            <div id="chart_igualdad"></div>
+            <div id="Atencion_a_grupos_especiales_Igualdad_de_Genero"></div>
             </div>
 
             <!-- Dependencia 3: GOBERNACIÓN -->
             <div class="col-md-4">
             <div class="chart-title h3">DIF</div>
-            <div id="chart_dif"></div>
+            <div id="Atencion_a_grupos_especiales_SMDIF"></div>
             </div>
         </div>
 
     </div>
-    <script src="./js/GraficaAtencion.js"></script>
+    <script src="./js/GraficasDirecciones.js"></script>
     <script src="./js/Hipervinculos.js"></script>
 </body>
 
