--- a/Ciudad.html
+++ b/Ciudad.html
@@ -32,19 +32,19 @@
         <div class="row mt-4 mb-4">
             <div class="col-md-4">
                 <div class="chart-title h3">Obras Públicas</div>
-                <div id="chart_obras"></div>
+                <div id="Ciudad_Obras_Publicas"></div>
             </div>
 
             <!-- Dependencia 2: ADMINISTRACIÓN -->
             <div class="col-md-4">
                 <div class="chart-title h3">Servicios Públicos</div>
-                <div id="chart_servicios"></div>
+                <div id="Ciudad_Servicios_Publicos"></div>
             </div>
 
             <!-- Dependencia 3: GOBERNACIÓN -->
             <div class="col-md-4">
                 <div class="chart-title h3">OPDAPAS</div>
-                <div id="chart_opdapas"></div>
+                <div id="Ciudad_OPDAPAS"></div>
             </div>
         </div>
 
@@ -52,23 +52,23 @@
         <div class="row mt-4 mb-4 justify-content-center">
             <div class="col-md-4">
                 <div class="chart-title h3">Gerencia de la Ciudad</div>
-                <div id="chart_gerencia"></div>
+                <div id="Ciudad_Gerencia_de_la_Ciudad"></div>
             </div>
 
             <!-- Dependencia 5: DESARROLLO SOCIAL -->
             <div class="col-md-4">
                 <div class="chart-title h3">Medio Ambiente</div>
-                <div id="chart_medio"></div>
+                <div id="Ciudad_Medio_Ambiente"></div>
             </div>
 
             <!-- Dependencia 5: DESARROLLO SOCIAL -->
             <div class="col-md-4">
                 <div class="chart-title h3">Desarrollo Urbano y Metropolitano</div>
-                <div id="chart_desarrollo"></div>
+                <div id="Ciudad_Desarrollo_Urbano_y_Metropolitano"></div>
             </div>
         </div>
     </div>
-    <script src="./js/GraficaCiudad.js"></script>
+    <script src="./js/GraficasDirecciones.js"></script>
     <script src="./js/Hipervinculos.js"></script>
 
 </body>
