--- a/Legal.html
+++ b/Legal.html
@@ -28,19 +28,19 @@
         <div class="row mt-4 mb-4 justify-content-center">
             <div class="col-md-4 text-center">
             <div class="chart-title h3">Consejería Jurídica</div>
-            <div id="chart_consejeria"></div>
+            <div id="Legal_y_Planeacion_Consejeria_Juridica"></div>
             </div>
 
             <!-- Dependencia 2: ADMINISTRACIÓN -->
             <div class="col-md-4 text-center">
             <div class="chart-title h3">Contraloría Municipal</div>
-            <div id="chart_contraloria"></div>
+            <div id="Legal_y_Planeacion_Contraloria_Municipal"></div>
             </div>
 
             <!-- Dependencia 3: GOBERNACIÓN -->
             <div class="col-md-4 text-center">
             <div class="chart-title h3">Gobernación</div>
-            <div id="chart_gobernacion"></div>
+            <div id="Legal_y_Planeacion_Gobernacion"></div>
             </div>
         </div>
 
@@ -48,17 +48,17 @@
         <div class="row mt-4 mb-4 justify-content-center">
             <div class="col-md-4 text-center">
             <div class="chart-title h3">Gobierno por Resultados</div>
-            <div id="chart_gobierno"></div>
+            <div id="Legal_y_Planeacion_Gobierno_por_Resultados"></div>
             </div>
 
             <!-- Dependencia 5: DESARROLLO SOCIAL -->
             <div class="col-md-4 text-center">
             <div class="chart-title h3">Transparencia</div>
-            <div id="chart_transparencia"></div>
+            <div id="Legal_y_Planeacion_Transparencia"></div>
             </div>
         </div>
     </div>
-    <script src="./js/GraficaLegal.js"></script>
+    <script src="./js/GraficasDirecciones.js"></script>
     <script src="./js/Hipervinculos.js"></script>
 </body>
 
