--- a/Social.html
+++ b/Social.html
@@ -30,54 +30,54 @@
         <div class="row mt-4 mb-4 justify-content-center">
             <div class="col-md-4 text-center">
                 <div class="chart-title h3">Desarrollo Social</div>
-                <div id="chart_social"></div>
+                <div id="Social_y_de_Resultados_Desarrollo_Social"></div>
             </div>
             <!-- Dependencia 2: ADMINISTRACIÓN -->
             <div class="col-md-4 text-center">
                 <div class="chart-title h3">Seguridad Pública</div>
-                <div id="chart_seguridad"></div>
+                <div id="Social_y_de_Resultados_Seguridad_Publica"></div>
             </div>
 
             <!-- Dependencia 3: GOBERNACIÓN -->
             <div class="col-md-4">
                 <div class="chart-title h3">Protección Civil y Bomberos</div>
-                <div id="chart_proteccion"></div>
+                <div id="Social_y_de_Resultados_Proteccion_Civil_y_Bomberos"></div>
             </div>
         </div>
         <div class="row mt-4 mb-4 text-center">
             <div class="col-md-4">
                 <div class="chart-title h3">Cultura</div>
-                <div id="chart_cultura"></div>
+                <div id="Social_y_de_Resultados_Cultura"></div>
             </div>
 
             <!-- Dependencia 5: DESARROLLO SOCIAL -->
             <div class="col-md-4 text-center">
                 <div class="chart-title h3">Desarrollo Ecónomico, Turístico y Artesanal</div>
-                <div id="chart_desarrollo"></div>
+                <div id="Social_y_de_Resultados_Desarrollo_Economico_Turistico_y_Artesanal"></div>
             </div>
 
             <!-- Dependencia 5: DESARROLLO SOCIAL -->
             <div class="col-md-4 text-center">
                 <div class="chart-title h3">IMCUFIDEM</div>
-                <div id="chart_imcufidem"></div>
-                <div class="chart-footer"><a href="#">Ir</a></div>
+                <div id="Social_y_de_Resultados_IMCUFIDEM"></div>
             </div>
         </div>
         <div class="row mt-4 mb-4 justify-content-center">
 
             <div class="col-md-4">
                 <div class="chart-title h3">Comunicación Social</div>
-                <div id="chart_comunicacion"></div>
+                <div id="Social_y_de_Resultados_Comunicacion_Social"></div>
             </div>
             <!-- Dependencia 3: GOBERNACIÓN -->
             <div class="col-md-4 text-center">
                 <div class="chart-title h3">Secretaría Técnica del Consejo Municipal de Seguridad Pública</div>
-                <div id="chart_secretaria" data-producto="Defensoria"></div>
+                <div id="Social_y_de_Resultados_Secretaria_Tecnica" data-producto="Defensoria"></div>
             </div>
         </div>
     </div>
-    <script src="./js/GraficaSocial.js"></script>
+    <!--<script src="./js/GraficaSocial.js"></script>-->
     <script src="./js/Hipervinculos.js"></script>
+    <script src="./js/GraficasDirecciones.js"></script>
 
 </body>
 
