--- a/Administrativo.html
+++ b/Administrativo.html
@@ -29,18 +29,18 @@
                 <div class="row mt-4 mb-4 justify-content-center">
                     <div class="col-md-4">
                     <div class="chart-title h3">Administración</div>
-                    <div id="chart_administracion"></div>
+                    <div id="Administrativo_Financiero_Administracion"></div>
                     </div>
 
                     <!-- Dependencia 2: ADMINISTRACIÓN -->
                     <div class="col-md-4">
                     <div class="chart-title h3">Tesorería</div>
-                    <div id="chart_tesoreria"></div>
+                    <div id="Administrativo_Financiero_Tesoreria"></div>
                     </div>
 
                 </div>
     </div>
-    <script src="./js/GraficaAdministrativo.js"></script>
+    <script src="./js/GraficasDirecciones.js"></script>
     <script src="./js/Hipervinculos.js"></script>
 
 </body>
