--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Presidencia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     <link rel="stylesheet" href="./css/stylesheet.css">
 </head>
 
@@ -34,20 +33,15 @@
                         <div style="margin-top: 0; margin-bottom: auto;">
                             <img src="./img/pdf.png" class="img-fluid me-2"
                                 style="width: calc(1vh + 2.5vw); cursor: pointer;" title="Ver Reporte General"
-                                id="verPdfGeneral" onclick="openPDF('./docs/9MarzoGeneral.pdf')">
+                                id="verPdfGeneral" onclick="openPDF('./docs/18MARZOGeneral.pdf')">
                         </div>
                     </div>
-
-
                 </div>
             </div>
             <!--Mejores y peores rendimientos-->
             <div class="shadow p-3 mb-5 bg-light rounded mt-4">
-
                 <div class="row mb-4">
-                    <div class="col-sm-1 col-md-1 col-lg-1">
-
-                    </div>
+                    <div class="col-sm-1 col-md-1 col-lg-1"></div>
                     <div class="col-sm-5 col-md-5 col-lg-5">
                         <h1 class="text-center mb-4" style="background:#60c34c; color:#ffff;">Mejores
                         </h1>
@@ -56,13 +50,12 @@
                                 <h2><img src="img/medalla.png" class="img-fluid me-2" id style="width:25px;"
                                         alt="">Tesorería
                                 </h2>
-
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Desarrollo Urbano y Metropolitano</h2>
+                                <h2>Seguridad Pública</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Administración</h2>
+                                <h2>Medio Ambiente</h2>
                             </li>
                         </ul>
                     </div>
@@ -74,10 +67,10 @@
                                 <h2>D. Social</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Gobierno Digital</h2>
+                                <h2>Asuntos Religiosos</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Obras Públicas</h2>
+                                <h2>Gerencia de la Ciudad</h2>
                             </li>
                         </ul>
                     </div>
@@ -86,10 +79,9 @@
                             <img src="./img/pdf.png" class="img-fluid me-2"
                                 style="width:calc(1vh + 2.5vw); cursor: pointer;"
                                 title="Ver Mejores y Peores Rendimientos" id="verPdf"
-                                onclick="openPDF('./docs/9MARZO.pdf')">
+                                onclick="openPDF('./docs/MR18Marzo.pdf')">
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -108,7 +100,6 @@
                         </button>
                     </div>
                 </div>
-
                 <!-- Dependencia 2: SOCIAL -->
                 <div class="col-md-4 text-center">
                     <div class="chart-title h3">Social y de Resultados</div>
@@ -118,8 +109,6 @@
                     </button>
                 </div>
             </div>
-
-
             <!-- Dependencia 4: DESARROLLO ECONÓMICO, TURÍSTICO Y ARTESANAL -->
             <div class="row mt-4 mb-4 justify-content-center">
                 <div class="col-md-4">
@@ -147,12 +136,10 @@
                         <img src="./img/flecha.png" alt="Ver" />
                     </button>
                 </div>
-
                 <div class="col-md-4 text-center">
                     <div class="chart-title h3">Atención Ciudadana</div>
                     <div id="Atencion_Ciudadana" data-producto="Ciudadana"></div>
                 </div>
-
                 <!-- Dependencia 2: ADMINISTRACIÓN -->
                 <div class="col-md-4 text-center">
                     <div class="chart-title h3">Defensoría Municipal de los Derechos Humanos</div>
