--- a/pruebapdf.html
+++ b/pruebapdf.html
@@ -1,49 +1,104 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Renderizar HTML a PDF</title>
+    <title>Renderizar HTML a PDF con Gráfico de Dona</title>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/gotham-fonts@1.0.3/css/gotham-rounded.min.css">
+
+    <style>
+        body {
+            font-family: 'Gotham', sans-serif;
+        }
+
+        h3,
+        p {
+            margin: 0;
+            padding: 0;
+        }
+
+        #chart {
+            border: none;
+        }
+
+        h2 {
+            font-size: 1.5rem;
+        }
+    </style>
 </head>
+
 <body>
-    <div id="page1" class="page">
-        <h1>Página 1</h1>
-        <p>Contenido de la página 1...</p>
-    </div>
+    <div id="content" style="margin-top: 0.7in; margin-right: 0.9in; margin-bottom: 0.4in;">
+        <div class="container">
+            <div class="row">
+                <div class="col justify-content-end d-flex">
+                    <img src="./imgDocx/MR1.png" alt="" style="width: 100%;">
+                </div>
+            </div>
+        </div>
+        <div id="mejoresContainer">
 
-    <div id="page2" class="page">
-        <h1>Página 2</h1>
-        <p>Contenido de la página 2...</p>
-    </div>
+        </div>
+        <div style="page-break-before: always;"></div>
+        <div class="container" style="margin-top: 0.7in; margin-right: 0.9in; margin-bottom: 0.4in;">
+            <div class="row">
+                <div class="col justify-content-end d-flex">
+                    <img src="./imgDocx/PR.png" alt="" style="width: 100%;">
+                </div>
+            </div>
+        </div>
+        <div id="peoresContainer">
 
-    <div id="page3" class="page">
-        <h1>Página 3</h1>
-        <p>Contenido de la página 3...</p>
-    </div>
+        </div>
+        <!-- Mejor rendimiento 
+        <div style="page-break-before: always;"></div>
+        <div class="container" style="margin-top: 0.4in; margin-right: 0.9in; margin-bottom: 0.4in; margin-left: 0in;">
+            <div class="row">
+                <div class="col d-flex">
+                    <img src="./imgDocx/header.png" alt="" style="width: 110%;">
+                </div>
+            </div>
+            <div class="container">
+                <div class="row" style="margin-top: -1in; margin-left: 0.4in;">
+                    <h2>MEJORES RENDIMIENTOS</h2>
+                    <p style="margin-left: 0.3in;">D. Social</p>
+                </div>
+            </div>
 
+            <div class="container">
+                <div class="row" style="margin-top: 2.2in; margin-left: 0.8in;">
+                    <div class="col">
+                        <h3>Resueltos:</h3>
+                        <p>33</p>
+                        <h3>Pendientes:</h3>
+                        <p>23</p>
+                        <h3>Rendimiento:</h3>
+                        <p>33</p>
+                    </div>
+                    <div class="col">
+                        <div id="chart" style="margin-top: -0.5in; margin-left: .3in;"></div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <img src="./imgDocx/tesoreria.png" alt="" style="width: 100%; display: block; margin-top: .5in; margin-left: .5in;">
+                </div>
+            </div>
+        </div>
+    -->
+    </div>
     <button id="download-pdf">Descargar PDF</button>
-
-    <script>
-        document.getElementById('download-pdf').addEventListener('click', async () => {
-            const pages = document.querySelectorAll('.page');
-            const options = {
-                filename: 'documento.pdf',
-                image: { type: 'jpeg', quality: 0.98 },
-                html2canvas: { scale: 2 },
-                jsPDF: { unit: 'in', format: 'letter', orientation: 'portrait' },
-                margin: { top: 0.5, right: 0.5, bottom: 0.5, left: 0.5 },
-                pagebreak: { mode: 'avoid-all', after: '.page' }
-            };
-
-            try {
-                const pdf = await html2pdf().from(pages).set(options).outputPdf();
-                pdf.save();
-                console.log('PDF generado correctamente.');
-            } catch (error) {
-                console.error('Error al generar el PDF:', error);
-            }
-        });
+    <script src="./js/DOMrendimientos.js"></script>
+    <script src="./js/chartRendimientos.js">
     </script>
+    <script src="./js/downloadPDF.js"></script>
+
 </body>
+
 </html>
