--- a/pruebapdf.html
+++ b/pruebapdf.html
@@ -34,6 +34,7 @@
 
 <body>
     <div id="content" style="margin-top: 0.7in; margin-right: 0.9in; margin-bottom: 0.4in;">
+        <div id="chart" style="margin-top: -0.5in; margin-left: .3in; border: 0;"></div>
         <div class="container">
             <div class="row">
                 <div class="col justify-content-end d-flex">
