Add Condition On Gen Best's

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                                 <h2>Seguridad Pública</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Medio Ambiente</h2>
+                                <h2>Contraloría Municipal</h2>
                             </li>
                         </ul>
                     </div>
@@ -67,10 +67,10 @@
                                 <h2>D. Social</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Asuntos Religiosos</h2>
+                                <h2>Transparencia</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Gerencia de la Ciudad</h2>
+                                <h2>Gobierno Digital</h2>
                             </li>
                         </ul>
                     </div>
