--- a/Legal.html
+++ b/Legal.html
@@ -59,7 +59,7 @@
         </div>
     </div>
     <script src="./js/GraficasDirecciones.js"></script>
-    <script src="./js/Hipervinculos.js"></script>
+    <script src="./js/volver.js"></script>
 </body>
 
 </html>
