--- a/Social.html
+++ b/Social.html
@@ -76,7 +76,7 @@
         </div>
     </div>
     <!--<script src="./js/GraficaSocial.js"></script>-->
-    <script src="./js/Hipervinculos.js"></script>
+    <script src="./js/volver.js"></script>
     <script src="./js/GraficasDirecciones.js"></script>
 
 </body>
