--- a/Administrativo.html
+++ b/Administrativo.html
@@ -41,7 +41,7 @@
                 </div>
     </div>
     <script src="./js/GraficasDirecciones.js"></script>
-    <script src="./js/Hipervinculos.js"></script>
+    <script src="./js/volver.js"></script>
 
 </body>
 
