--- a/Atencion.html
+++ b/Atencion.html
@@ -47,7 +47,7 @@
 
     </div>
     <script src="./js/GraficasDirecciones.js"></script>
-    <script src="./js/Hipervinculos.js"></script>
+    <script src="./js/volver.js"></script>
 </body>
 
 </html>
