--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <div style="margin-top: 0; margin-bottom: auto;">
                             <img src="./img/pdf.png" class="img-fluid me-2"
                                 style="width: calc(1vh + 2.5vw); cursor: pointer;" title="Ver Reporte General"
-                                id="verPdfGeneral" onclick="openPDF('./docs/23MARZOGeneral.pdf')">
+                                id="verPdfGeneral" onclick="openPDF('./docs/5ABRILGeneral.pdf')">
                         </div>
                     </div>
                 </div>
@@ -79,7 +79,7 @@
                             <img src="./img/pdf.png" class="img-fluid me-2"
                                 style="width:calc(1vh + 2.5vw); cursor: pointer;"
                                 title="Ver Mejores y Peores Rendimientos" id="verPdf"
-                                onclick="openPDF('./docs/MR23MARZO.pdf')">
+                                onclick="openPDF('./docs/MR5ABRIL.pdf')">
                         </div>
                     </div>
                 </div>
