--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <div style="margin-top: 0; margin-bottom: auto;">
                             <img src="./img/pdf.png" class="img-fluid me-2"
                                 style="width: calc(1vh + 2.5vw); cursor: pointer;" title="Ver Reporte General"
-                                id="verPdfGeneral" onclick="openPDF('./docs/5ABRILGeneral.pdf')">
+                                id="verPdfGeneral" onclick="openPDF('./docs/13ABRILGeneral.pdf')">
                         </div>
                     </div>
                 </div>
@@ -64,13 +64,13 @@
                         </h1>
                         <ul class="list-group list-group-flush text-center">
                             <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>D. Social</h2>
-                            </li>
-                            <li class="list-group-item bg-light" style="color:#204f7b;">
-                                <h2>Transparencia</h2>
+                                <h2>Defensoría Municipal de DDHH</h2>
                             </li>
                             <li class="list-group-item bg-light" style="color:#204f7b;">
                                 <h2>Gobierno Digital</h2>
+                            </li>
+                            <li class="list-group-item bg-light" style="color:#204f7b;">
+                                <h2>Obras Públicas</h2>
                             </li>
                         </ul>
                     </div>
@@ -79,7 +79,7 @@
                             <img src="./img/pdf.png" class="img-fluid me-2"
                                 style="width:calc(1vh + 2.5vw); cursor: pointer;"
                                 title="Ver Mejores y Peores Rendimientos" id="verPdf"
-                                onclick="openPDF('./docs/MR5ABRIL.pdf')">
+                                onclick="openPDF('./docs/MR.pdf')">
                         </div>
                     </div>
                 </div>
