Move Graph Defensoria DDHH -> Legal

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
 
 <head>
     <meta charset="UTF-8">
@@ -135,15 +135,6 @@
                     <button class="ir shadow" data-producto="Atencion">
                         <img src="./img/flecha.png" alt="Ver" />
                     </button>
-                </div>
-                <div class="col-md-4 text-center">
-                    <div class="chart-title h3">Atención Ciudadana</div>
-                    <div id="Atencion_Ciudadana" data-producto="Ciudadana"></div>
-                </div>
-                <!-- Dependencia 2: ADMINISTRACIÓN -->
-                <div class="col-md-4 text-center">
-                    <div class="chart-title h3">Defensoría Municipal de los Derechos Humanos</div>
-                    <div id="Defensoria_Municipal_de_los_Derechos_Humanos" data-producto="Secretaria"></div>
                 </div>
             </div>
         </div>
